# advanced-transformers-lib

./: .gitignore  A Design Law for MoSA-Style Sparse Attention_ Trading Parameters for Long-Sequence Performance.tex  LICENSE  SOARS SHRAM Effect.ipynb  job.md  main.tex  plan.md  pytest.ini
.github/workflows/: agent_apply_cache_compat.yml  agent_fix_entmax_normalization.yml  llama3.yml  (+8 more)
src/llama3/: Legal.md  __init__.py  attention.py  configuration.py  decoder_layer.py  documentation.md  mlp.py  model.py  model_card.md  plan.md  pyproject.toml  rope.py  setup_dev_environment.py  stage_for_hub.py  type_aliases.py  upload_to_hub.py
src/llama3/model/: README.md  attention.py  config.json  configuration.py  decoder_layer.py  huggingface.py  model.py  tokenizer_config.json
src/shram/: documentation.md  job.md  model_card.md  plan.md  pyproject.toml  requirements-dev.txt  setup_dev_environment.py  stage_for_hub.py  tokenizer.py  upload_to_hub.py
src/shram/model/: README.md  __init__.py  attention.py  config.json  configuration.py  decoder_layer.py  huggingface.py  initialization.py  load_balance_loss.py  mlp.py  model.py  rope.py  router.py  tokenizer.json  tokenizer_config.json
src/shram/model/attention/: bottlenecked_ensemble_attention.py  expert_packing.py  load_balance_loss.py  mosrah.py  positions_converter.py  router.py  shram.py  sliding_window_attention.py
src/shram/model/cache/: __init__.py  mosrah_cache.py  router_cache.py  shram_cache.py  shram_layer_cache.py  sliding_window_cache.py  slow_mosrah_cache.py
src/shram/papers/: main.tex
tests/: conftest.py
(+70 files in other folders)
