[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llama3"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = [".."]
include = ["llama3*"]
