[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shram"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers",
    "huggingface_hub",
    "libcst",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["shram*"]
